Bunch of easy fixups